step 2: show transaction items

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="inc-exp">
         <div>
           <h3>Income</h3>
-          <p id="money-plus" class="money plus">+0.00€</p>
+          <p id="money-plus" class="money plus">0.00€</p>
         </div>
         <div>
           <h3>Expense</h3>
@@ -26,14 +26,7 @@
       </div>
 
       <h2>History</h2>
-      <ul id="list" class="list">
-        <li class="minus">
-          Cash <span>-400€</span><button class="delete-btn">x</button>
-        </li>
-        <li class="plus">
-          Cash <span>+700€</span><button class="delete-btn">x</button>
-        </li>
-      </ul>
+      <ul id="list" class="list"></ul>
 
       <h2>Add new transaction</h2>
       <form id="form">
