display balance, income and expense

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
       </div>
 
       <h2>History</h2>
-      <ul id="list" class="list"></ul>
+      <ul id="list" class="list">
+        <li class="minus">
+          Flower <span>-400€</span><button class="delete-btn">x</button>
+        </li>
+        <li class="plus">
+          Salary <span>700€</span><button class="delete-btn">x</button>
+        </li>
+      </ul>
 
       <h2>Add new transaction</h2>
       <form id="form">
